build a deb instead